--- a/docs/faststore/components/atoms/slider.mdx
+++ b/docs/faststore/components/atoms/slider.mdx
@@ -209,7 +209,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Data attributes
 
-You can target and override Badge styles using the following data attributes:
+You can target and override Slider styles using the following data attributes:
 
 `data-fs-slider`
 
