--- a/docs/faststore/components/atoms/slider.mdx
+++ b/docs/faststore/components/atoms/slider.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Slider"
 excerpt: Sliders allow users to select a single value from a range.
-sidebar_custom_props:
-  image: https://vtexhelp.vtexassets.com/assets/docs/src/Slider___9fa1f5d802a9bbdc93a77db318594af7.png
+components:
+  - Slider.tsx
 ---
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Slider)
