update: restructure docs

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -386,7 +386,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ---
 
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow
