--- a/docs/faststore/components/atoms/select.mdx
+++ b/docs/faststore/components/atoms/select.mdx
@@ -13,7 +13,7 @@ components:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Select)
 
-Select components allow users to pick an option from a predefined list. The Select component should be used when there are more than 5 options available. Otherwise, consider using the [RadioGroup](https://developers.vtex.com/docs/guides/faststore/molecules-radio-group) component.
+Select components allow users to pick an option from a predefined list. The Select component should be used when there are more than five options available. Otherwise, consider using the [RadioGroup](https://developers.vtex.com/docs/guides/faststore/molecules-radio-group) component.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
