--- a/docs/faststore/components/atoms/skeleton.mdx
+++ b/docs/faststore/components/atoms/skeleton.mdx
@@ -10,12 +10,12 @@ components:
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Skeleton)
 
 This feature improves the store's experience and perceived performance through loading placeholders.
-`Skeletons` are like an element's or section's wireframe. It's a placeholder
-that simulates the layout of these elements/sections while data is being loaded.
+`skeletons` are like an element's or section's wireframe. They're placeholders
+that simulate the layout of these elements or sections while data loads.
 
 Instead of showing a blank page, displaying `Skeletons` while loading content makes the user feel like the store is more responsive and faster.
 
-Also by using `Skeletons` the store will be less likely to experience [Cumulative Layout Shilf (or CLS)](https://web.dev/i18n/en/cls/).
+Additionally, by using `skeletons`, the store will be less likely to experience [Cumulative Layout Shift (or CLS)](https://web.dev/i18n/en/cls/).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
