--- a/docs/faststore/components/atoms/sr-only.mdx
+++ b/docs/faststore/components/atoms/sr-only.mdx
@@ -1,6 +1,6 @@
 ---
 title: "SROnly"
-excerpt: Hides an element visually. Improve accessibility by providing text to screen readers when applied.
+excerpt: Hides an element visually and improves accessibility by providing text to screen readers.
 ---
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/SROnly)
