--- a/docs/faststore/components/atoms/loader.mdx
+++ b/docs/faststore/components/atoms/loader.mdx
@@ -38,9 +38,9 @@ components:
 import { Loader } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/atoms/Loader/styles.scss';
