--- a/docs/faststore/components/atoms/price.mdx
+++ b/docs/faststore/components/atoms/price.mdx
@@ -42,9 +42,9 @@ Prices are used to display the price of a given product, discount and total valu
 import { Price } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/atoms/Price/styles.scss';
