--- a/docs/faststore/components/atoms/overlay.mdx
+++ b/docs/faststore/components/atoms/overlay.mdx
@@ -62,9 +62,9 @@ function Component() {
 import { Overlay } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/atoms/Overlay/styles.scss';
