--- a/docs/faststore/components/atoms/select.mdx
+++ b/docs/faststore/components/atoms/select.mdx
@@ -70,9 +70,9 @@ Select components allow users to pick an option from a predefined list. The Sele
 import { Select } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/atoms/Select/styles.scss';
