--- a/docs/faststore/components/atoms/skeleton.mdx
+++ b/docs/faststore/components/atoms/skeleton.mdx
@@ -59,9 +59,9 @@ Additionally, by using `skeletons`, the store will be less likely to experience 
 import { Skeleton } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/atoms/Skeleton/styles.scss';
