Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/atoms/link.mdx
+++ b/docs/faststore/components/atoms/link.mdx
@@ -13,7 +13,7 @@ sidebar_custom_props:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Link)
 
-The `Link` component performs the same behavior as a regular anchor tag (`a`), but can be used as any HTML tag or component, including specific framework link components.
+The `Link` component behaves like a regular anchor tag (`a`), but it can be rendered as any HTML tag or component, including specific framework link components.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -236,7 +236,7 @@ You can target and override `Link` styles using the following data attributes:
 
 ## Props
 
-The `Link` component supports all attributes supported by the tag `a`.
+The `Link` component supports all attributes supported by the `a` tag.
 If you need to use it as an external link component (i.e., Next.js `Link` or Gatsby `Link`), the FastStore UI `Link` component can be used with the `as={NextLink}` prop.
 
 Besides those attributes, the following props are also supported:
