--- a/docs/faststore/components/atoms/skeleton.mdx
+++ b/docs/faststore/components/atoms/skeleton.mdx
@@ -13,9 +13,9 @@ This feature improves the store's experience and perceived performance through l
 `skeletons` are like an element's or section's wireframe. They're placeholders
 that simulate the layout of these elements or sections while data loads.
 
-Instead of showing a blank page, displaying `Skeletons` while loading content makes the user feel like the store is more responsive and faster.
+Instead of showing a blank page, displaying `skeletons` while loading content makes users feel that the store is more responsive and faster.
 
-Additionally, by using `skeletons`, the store will be less likely to experience [Cumulative Layout Shift (or CLS)](https://web.dev/i18n/en/cls/).
+Additionally, by using `skeletons`, the store will be less likely to experience [Cumulative Layout Shift (CLS)](https://web.dev/i18n/en/cls/).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
